fix(sundial): fixed add custom data source with driver class name.